--- a/Card_Template.html
+++ b/Card_Template.html
@@ -10,7 +10,7 @@
 	<link href="css/keyrune.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body class="mtgc">
 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">	
 <div class="flipper">	
 <div class="card front">
